- Corrected 2.5.x version number. - Joomla 2.5 can't be done with using /installation/CHANGELOG file. - Added back detection for version 1.5.x. - Added note about end of life versions.

--- a/yamls/joomla-2.5.yml
+++ b/yamls/joomla-2.5.yml
@@ -77,18 +77,18 @@
 # CVE-2012-4532 2.5.7   http://osvdb.org/83490 SA49678 http://developer.joomla.org/security/news/540-20120902-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html http://www.darksecurity.de/advisories/2012/SSCHADV2012-014.txt
 #Joomla 2.5:
 #  1:
-#      location: ['TODO']
-#      secure_version: 'TOD'
-#      regexp: ['TODO']
-#      cve: CVE-2012-1598 http://developer.joomla.org/security/news/396-20120305-core-password-change CVE-2012-1599 http://osvdb.org/80708 http://developer.joomla.org/security/news/397-20120306-core-information-disclosure
-#      fingerprint: TODO
-#      post_processing: ['php5.fcgi']
+#    # Can't use /installation/CHANGELOG in here as Joomla requests deletion of that directory.
+#    location: ['']
+#    secure_version: '2.5.7'
+#    regexp: ['']
+#    cve: 'CVE-2012-2412 http://osvdb.org/87038, CVE-2012-4531 http://osvdb.org/87038, CVE-2012-4532 http://osvdb.org/83490'
+#    fingerprint:
+#    post_processing: ['php5.fcgi']
 Joomla 1.x:
   1:
     location: ['/libraries/joomla/version.php', '/includes/version.php']
-    secure_version: '2.5'
-    regexp: ['.*?RELEASE.*?(?P<version>1.[7,6])', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: CVE-2012-1598 http://developer.joomla.org/security/news/396-20120305-core-password-change CVE-2012-1599 http://osvdb.org/80708 http://developer.joomla.org/security/news/397-20120306-core-information-disclosure
+    secure_version: '2.5.7'
+    regexp: ['.*?RELEASE.*?(?P<version>1.[5,6,7])', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
+    cve: 'CVE-2012-1598 http://developer.joomla.org/security/news/396-20120305-core-password-change CVE-2012-1599 http://osvdb.org/80708 http://developer.joomla.org/security/news/397-20120306-core-information-disclosure Please upgrade to Joomla 2.5.7 all 1.x versions are end of life.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
-
