--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -73,11 +73,14 @@
 # CVE-2012-0837
 # CVE-2012-1598 1.5.26      http://developer.joomla.org/security/news/396-20120305-core-password-change
 # CVE-2012-1599 1.5.26      http://osvdb.org/80708 http://developer.joomla.org/security/news/397-20120306-core-information-disclosure
+# CVE-XXXX-XXXX 2.5.2       http://osvdb.org/80705
 # CVE-2012-1116
 # CVE-2012-1117 2.5.2       http://osvdb.org/79836
 # CVE-2012-1562 2.5.3       http://osvdb.org/80112
 # CVE-2012-1563 2.5.3       http://osvdb.org/80111
 # CVE-2012-2412 2.5.7       http://osvdb.org/87038
+# CVE-2012-2747 2.5.5       http://osvdb.org/83070 http://secunia.com/advisories/49605/
+# CVE-2012-2748 2.5.5       http://osvdb.org/83069 http://secunia.com/advisories/49605/
 # CVE-2012-4531 2.5.7       http://osvdb.org/87038 SA49678 http://developer.joomla.org/security/news/539-20120901-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html
 # CVE-2012-4532 2.5.7       http://osvdb.org/83490 SA49678 http://developer.joomla.org/security/news/540-20120902-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html http://www.darksecurity.de/advisories/2012/SSCHADV2012-014.txt
 #Joomla 2.5:
