--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -26,3 +26,11 @@
 # CVE-2013-XXXX 1.6.10  http://osvdb.org/92687
 # CVE-2013-XXXX 1.6.10  http://osvdb.org/92688
 # CVE-2013-XXXX 1.6.10  http://osvdb.org/92689
+MyBB:
+  1:
+      location: ['/inc/class_core.php']
+      secure_version: '1.6.10'
+      regexp: ['.*?public.*?\$version.*?(?P<version>[0-9.]+)']
+      cve: 'http://osvdb.org/92683 http://osvdb.org/92684 http://osvdb.org/92686 http://osvdb.org/92687 http://osvdb.org/92688 http://osvdb.org/92689'
+      fingerprint: detect_general
+      post_processing: ['php5.fcgi']
