--- a/yamls/coppermine.yml
+++ b/yamls/coppermine.yml
@@ -11,6 +11,6 @@ Coppermine:
     location: ['/sql/basic.sql']
     secure_version: '1.5.20'
     regexp: ['.*?Coppermine version.*?(?P<version>[0-9.]+)']
-    cve: 'CVE-2012-1613, CVE-2012-1614, http://osvdb.org/80731 http://osvdb.org/80732 http://osvdb.org/80733 http://osvdb.org/80734 http://osvdb.org/80735'
+    cve: 'CVE-2012-1613, CVE-2012-1614, http://osvdb.org/80731 http://osvdb.org/80732 http://osvdb.org/80733 http://osvdb.org/80734 http://osvdb.org/80735 http://forum.coppermine-gallery.net/index.php/topic,74682.0.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
