Removed old TODO entry. I added it somewhere else and review it later.

--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -80,7 +80,7 @@
 # CVE-2011-3128 3.1.3   http://osvdb.org/74489 http://wordpress.org/news/2011/05/wordpress-3-1-3/
 # CVE-2011-3129 3.1.3   http://osvdb.org/74490 http://wordpress.org/news/2011/05/wordpress-3-1-3/
 # CVE-2011-3130 3.1.3   http://osvdb.org/74491 http://wordpress.org/news/2011/05/wordpress-3-1-3/
-# CVE-????-???? 3.1.4   http://osvdb.org/73721 http://wordpress.org/news/2011/06/wordpress-3-1-4/ TODO: no CVE
+# CVE-????-???? 3.1.4   http://osvdb.org/73721 http://wordpress.org/news/2011/06/wordpress-3-1-4/
 # CVE-2011-4898/CVE-2011-4899/CVE-2012-0782 3.3.1   http://osvdb.org/7870778708,78709 https://www.trustwave.com/spiderlabs/advisories/TWSL2012-002.txt
 # CVE-2012-0287 3.3.1   http://osvdb.org/78123 SA47371 https://wordpress.org/news/2012/01/wordpress-3-3-1/
 # CVE-2012-2399 3.3.2   http://codex.wordpress.org/Version_3.3.2
