--- a/yamls/gallery.yml
+++ b/yamls/gallery.yml
@@ -1,6 +1,7 @@
 # NOTES:
 #   http://osvdb.org/92789 should be removed as duplicate of http://osvdb.org/92691
 #   http://osvdb.org/92690 should be removed as duplicate of http://osvdb.org/92740
+# CVE-2006-XXXX 2.1.2 http://osvdb.org/27998
 # CVE-2006-4976
 # CVE-2008-5296
 # CVE-2012-1113
