--- a/yamls/zenphoto.yml
+++ b/yamls/zenphoto.yml
@@ -1,25 +1,24 @@
 # URL: http://www.zenphoto.org/
 # Version: zp-core/version.php:define('ZENPHOTO_VERSION', '1.4.3.3');
 # Newest: Zenphoto 1.4.5 (Jul 02, 2013)
-# CVE-2012-0995
 # CVE-2009-4562
 # CVE-2009-4563
 # CVE-2009-4564
-# CVE-2010-4907 1.3.1   http://osvdb.org/67848 SA41342
 # CVE-2010-4906 1.4.2.1 http://osvdb.org/67847 SA41350
+# CVE-2010-4907 1.3.1   http://osvdb.org/67848 SA41342
+# CVE-2011-XXXX 1.4.2.1 http://osvdb.org/71989 SA44323
 # CVE-2012-0993 1.4.2.1 http://osvdb.org/78979 SA47875
 # CVE-2012-0994 1.4.2.1 http://osvdb.org/78980 SA47875
 # CVE-2012-0995 1.4.2.1 http://osvdb.org/78981 http://osvdb.org/78982 SA47875 
 # CVE-2012-2641 1.4.3   http://osvdb.org/83487 SA49787
-# CVE-2011-XXXX 1.4.2.1 http://osvdb.org/71989 SA44323
-# TODO CVE-2013-XXXX ?       http://osvdb.org/90547 http://packetstormsecurity.com/files/120422/Zenphoto-1.4.4.1-Blind-SQL-Injection.html
-# CVE-XXXX-XXXX 1.4.3.4 87015 87016 87017 87018 87019 87020 87021 87022 87023 87024 87025 87026 87027 87028 87029 87030 87031 87032 87033 http://www.waraxe.us/content-96.html
 # CVE-2012-4519 1.4.3.3 http://osvdb.org/85899 SA50799 # TODO: Verify if fixed in this version
+# CVE-2013-XXXX ?       http://osvdb.org/90547 http://packetstormsecurity.com/files/120422/Zenphoto-1.4.4.1-Blind-SQL-Injection.html TODO
+# CVE-2012-XXXX 1.4.3.4 87015 87016 87017 87018 87019 87020 87021 87022 87023 87024 87025 87026 87027 87028 87029 87030 87031 87032 87033 http://www.waraxe.us/content-96.html http://openwall.com/lists/oss-security/2013/07/10/19
 Zenphoto:
   1:
     location: ['/zp-core/version.php']
-    secure_version: '1.4.3'
+    secure_version: '1.4.3.4'
     regexp: ["define.*?ZENPHOTO_VERSION.*?(?P<version>[0-9.]+)"]
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-2641 http://osvdb.org/83487 http://secunia.com/advisories/49787/'
+    cve: 'http://www.waraxe.us/content-96.html http://osvdb.org/87015'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
