--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: python
 python:
   - '2.6'
   - '2.7'
-install:
-  - pip install paver
-  - pip install .
+install: 'pip install -r requirements.txt --use-mirrors'
 script: python tests.py
 notifications:
   irc:
