--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - '2.6'
   - '2.7'
 install: 'pip install -r requirements.lst --use-mirrors'
-before_script: "sudo chmod 777 /dev/shm"
+before_script: "sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm"
 script: python tests.py
 notifications:
   irc:
