--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -1,4 +1,9 @@
 # http://www.mediawiki.org/wiki/Version_lifecycle
+# CVE-2013-4304 extension. not going to add yet. maybe in future
+# CVE-2013-4305 extension. not going to add yet. maybe in future
+# CVE-2013-4306 extension. not going to add yet. maybe in future
+# CVE-2013-4307 extension. not going to add yet. maybe in future
+# CVE-2013-4308 extension. not going to add yet. maybe in future
 # CVE-2009-4570
 # CVE-2009-4589
 # CVE-2010-1150 1.15.3      http://osvdb.org/63570 SA39333
@@ -31,33 +36,31 @@
 # CVE-2013-4301 1.21.2/1.20.7/1.19.8    http://osvdb.org/96913 http://secunia.com/advisories/54715/
 # CVE-2013-4302 1.21.2/1.20.7/1.19.8    http://osvdb.org/96912 http://secunia.com/advisories/54715/
 # CVE-2013-4303 1.21.2/1.20.7/1.19.8    http://osvdb.org/96911 http://secunia.com/advisories/54715/
-# CVE-2013-4304 extension. not going to add yet. maybe in future
-# CVE-2013-4305 extension. not going to add yet. maybe in future
-# CVE-2013-4306 extension. not going to add yet. maybe in future
-# CVE-2013-4307 extension. not going to add yet. maybe in future
-# CVE-2013-4308 extension. not going to add yet. maybe in future
+# CVE-2013-4567 1.21.3/1.20.8/1.19.9    http://osvdb.org/99943 http://secunia.com/advisories/55743/ http://lists.wikimedia.org/pipermail/mediawiki-announce/2013-November/000135.html
+# CVE-2013-4568 1.21.3/1.20.8/1.19.9    http://osvdb.org/99943 http://secunia.com/advisories/55743/ http://lists.wikimedia.org/pipermail/mediawiki-announce/2013-November/000135.html
+# CVE-2013-4572 1.21.3/1.20.8/1.19.9    http://osvdb.org/99970 http://secunia.com/advisories/55743/ http://lists.wikimedia.org/pipermail/mediawiki-announce/2013-November/000135.html
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.21.2'
+    secure_version: '1.21.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
-    cve: 'CVE-2013-4301 http://osvdb.org/96913, CVE-2013-4302 http://osvdb.org/96912, CVE-2013-4303 http://osvdb.org/96911, http://secunia.com/advisories/54715/'
+    cve: 'CVE-2013-4567 CVE-2013-4568 http://osvdb.org/99943 CVE-2013-4572 http://osvdb.org/99970 http://secunia.com/advisories/55743/ http://lists.wikimedia.org/pipermail/mediawiki-announce/2013-November/000135.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.20.7'
+    secure_version: '1.20.8'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
-    cve: 'CVE-2013-4301 http://osvdb.org/96913, CVE-2013-4302 http://osvdb.org/96912, CVE-2013-4303 http://osvdb.org/96911, http://secunia.com/advisories/54715/'
+    cve: 'CVE-2013-4567 CVE-2013-4568 http://osvdb.org/99943 CVE-2013-4572 http://osvdb.org/99970 http://secunia.com/advisories/55743/ http://lists.wikimedia.org/pipermail/mediawiki-announce/2013-November/000135.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.19.8'
+    secure_version: '1.19.9'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
-    cve: 'CVE-2013-4301 http://osvdb.org/96913, CVE-2013-4302 http://osvdb.org/96912, CVE-2013-4303 http://osvdb.org/96911, http://secunia.com/advisories/54715/'
+    cve: 'CVE-2013-4567 CVE-2013-4568 http://osvdb.org/99943 CVE-2013-4572 http://osvdb.org/99970 http://secunia.com/advisories/55743/ http://lists.wikimedia.org/pipermail/mediawiki-announce/2013-November/000135.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.18:
