--- a/yamls/wikkawiki.yml
+++ b/yamls/wikkawiki.yml
@@ -22,7 +22,7 @@
 # CVE-2011-4450 1.3.2-p7    http://osvdb.org/77392 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
 # CVE-2011-4451 1.3.2-p7    http://osvdb.org/77393 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
 # CVE-2011-4452 1.3.2-p7    http://osvdb.org/77394 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
-# CVE-2013-5586 1.3.4-p1    http://secunia.com/advisories/54790/
+# CVE-2013-5586 1.3.4-p1    http://secunia.com/advisories/54790/ https://www.htbridge.com/advisory/HTB23170
 WikkaWiki:
   1:
     location: ['/version.php']
