--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -14,11 +14,13 @@
 # https://drupal.org/SA-CORE-2013-003   CVE-2013-6387   7.24/6.29   http://osvdb.org/100033
 # https://drupal.org/SA-CORE-2013-003   CVE-2013-6388   7.24/6.29   http://osvdb.org/100034
 # https://drupal.org/SA-CORE-2013-003   CVE-2013-6389   7.24/6.29   http://osvdb.org/100035
+# https://drupal.org/SA-CORE-2014-001   CVE-2014-1475   7.26/6.30   http://osvdb.org/102124
+# https://drupal.org/SA-CORE-2014-001   CVE-2014-1476   7.26/6.30   http://osvdb.org/102125
 Drupal:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.24'
+    secure_version: '7.26'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'CVE-2013-6385 http://osvdb.org/100036 CVE-2013-6386 http://osvdb.org/100037 CVE-2013-6387 http://osvdb.org/100033 CVE-2013-6388 http://osvdb.org/100034 CVE-2013-6389 http://osvdb.org/100035'
+    cve: 'https://drupal.org/SA-CORE-2014-001 CVE-2014-1475 http://osvdb.org/102124 CVE-2014-1476 http://osvdb.org/102125'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
