Added fingerprint data.

--- a/yamls/collabtive.yml
+++ b/yamls/collabtive.yml
@@ -1,4 +1,5 @@
 # URL: http://www.collabtive.com/
+# CVE-2012-2670
 # CVE-2013-6872 1.2 http://osvdb.org/102123 http://secunia.com/advisories/56329/
 Collabtive:
   1:
